--- a/docs/docs/genai/eval-monitor/custom-scorers.mdx
+++ b/docs/docs/genai/eval-monitor/custom-scorers.mdx
@@ -25,7 +25,7 @@ graph TD
 
 ## When Custom Scorers Make Sense
 
-Custom scorers become valuable when you need custom heuristic or code-based evaluation for deterministic logic that runs fast and provides objective assessments. They're essential for customizing data mapping, allowing you to control how data from your app's [trace](/genai/tracing/tracing-101) maps to evaluation logic. You might also need custom LLM-based evaluation logic that goes beyond predefined judges, or integration with your own LLM models rather than standard evaluation endpoints.
+Custom scorers become valuable when you need custom heuristic or code-based evaluation for deterministic logic that runs fast and provides objective assessments. They're essential for customizing data mapping, allowing you to control how data from your app's [trace](/genai/tracing) maps to evaluation logic. You might also need custom LLM-based evaluation logic that goes beyond predefined judges, or integration with your own LLM models rather than standard evaluation endpoints.
 
 The most compelling use case emerges with specialized requirements that demand more flexibility than predefined abstractions can provide. This includes industry-specific quality criteria, complex multi-step validation processes, or integration with external services and databases that inform quality assessment.
 
