--- a/docs/docs/genai/eval-monitor/predefined-judge-scorers.mdx
+++ b/docs/docs/genai/eval-monitor/predefined-judge-scorers.mdx
@@ -40,7 +40,7 @@ MLflow OSS includes the complete [scorer framework](/genai/eval-monitor/concepts
 
 The decision between predefined and custom scorers depends on your application's complexity and evaluation requirements. Predefined scorers work best when starting GenAI evaluation and needing proven baselines, assessing standard quality dimensions like relevance or safety, or when you want quick setup without development overhead.
 
-Custom scorers become necessary when your application has complex inputs and outputs that predefined scorers can't parse, you need domain-specific evaluation criteria, or your [trace structure](/genai/tracing/tracing-101) doesn't match standard expectations.
+Custom scorers become necessary when your application has complex inputs and outputs that predefined scorers can't parse, you need domain-specific evaluation criteria, or your [trace structure](/genai/tracing) doesn't match standard expectations.
 
 ```mermaid
 flowchart TD
