--- a/docs/docs/genai/getting-started/tracing/tracing-notebook.mdx
+++ b/docs/docs/genai/getting-started/tracing/tracing-notebook.mdx
@@ -167,7 +167,7 @@ This simple trace already provides valuable insights into your application's beh
 
 Congratulations! You've successfully built your first GenAI application with MLflow Tracing and OpenAI.
 
-- **Learn more about Tracing**: Learn about [tracing concepts](/genai/tracing/tracing-101), [manual tracing](/genai/tracing/app-instrumentation/manual-tracing) for more control, [tracking users & sessions](/genai/tracing/track-users-sessions), and [tracking environments & context](/genai/tracing/track-environments-context) to your traces.
+- **Learn more about Tracing**: Learn about [tracing concepts](/genai/tracing), [manual tracing](/genai/tracing/app-instrumentation/manual-tracing) for more control, [tracking users & sessions](/genai/tracing/track-users-sessions), and [tracking environments & context](/genai/tracing/track-environments-context) to your traces.
 - **Evaluate your application**: Use MLflow's [evaluation capabilities](/genai/eval-monitor) to measure the quality of your GenAI app.
 
 :::tip
