--- a/docs/docs/genai/tracing/prod-tracing.mdx
+++ b/docs/docs/genai/tracing/prod-tracing.mdx
@@ -5,28 +5,53 @@ import { CardGroup, SmallLogoCard, Card } from "@site/src/components/Card";
 
 # Production Monitoring for GenAI Applications
 
-
 Machine learning projects don't conclude with their initial launch. Ongoing monitoring and incremental enhancements are critical for long-term success. MLflow Tracing offers comprehensive observability for your production applications, supporting the iterative process of continuous improvement while ensuring quality delivery to users.
 
 GenAI applications face unique challenges that make production monitoring essential. Quality drift can occur over time due to model updates, data distribution shifts, or new user interaction patterns. The operational complexity of multi-step workflows involving LLMs, vector databases, and retrieval systems creates multiple potential failure points that need continuous oversight. Cost management becomes critical as token usage and API costs can vary significantly based on user behavior and model performance.
 
-## Prerequisites for Production Deployments
 
-For production deployments, it is highly recommended to install the lightweight `mlflow-tracing` package:
+## Key Monitoring Areas
 
-```bash
-pip install --upgrade mlflow-tracing
-```
+Understanding what to monitor helps you focus on metrics that actually impact user experience and business outcomes. Rather than trying to monitor everything, focus on areas that provide actionable insights for your specific application and user base.
 
-### Pro Tip: Using the Lightweight Tracing SDK
+<Tabs>
+  <TabItem value="operational" label="Operational Metrics" default>
+    **Performance and Reliability**: Monitor end-to-end response times from user request to final response, including LLM inference latency, retrieval system performance, and component-level bottlenecks. Track overall error rates, LLM API failures, timeout occurrences, and dependency failures to maintain system reliability.
 
-The [MLflow Tracing SDK `mlflow-tracing`](/genai/tracing/lightweight-sdk) is a lightweight package that only includes the minimum set of dependencies to instrument your code/models/agents with MLflow Tracing.
+    **Resource Utilization**: Monitor token consumption patterns, API cost tracking, request throughput, and system resource usage to optimize performance and control costs.
+
+    **Business Metrics**: Track user engagement rates, session completion rates, feature adoption, and user satisfaction scores to understand the business impact of your application.
+  </TabItem>
+  <TabItem value="quality" label="Quality Metrics">
+    **Response Quality**: Assess response relevance to user queries, factual accuracy, completeness of responses, and consistency across similar queries to ensure your application meets user needs.
+
+    **Safety and Compliance**: Monitor for harmful content detection, bias monitoring, privacy compliance, and regulatory adherence, which is especially important for applications in regulated industries.
+
+    **User Experience Quality**: Track response helpfulness, clarity and readability, appropriate tone and style, and multi-turn conversation quality to optimize user satisfaction.
+
+    **Domain-Specific Quality**: Implement metrics that vary by application type, such as technical accuracy for specialized domains, citation quality for RAG applications, code quality for programming assistants, or creative quality for content generation.
+  </TabItem>
+  <TabItem value="business" label="Business Impact">
+    **User Behavior**: Monitor session duration and depth, feature usage patterns, user retention rates, and conversion metrics to understand how users engage with your application.
+
+    **Operational Efficiency**: Track support ticket reduction, process automation success, time savings for users, and task completion rates to measure operational improvements.
+
+    **Cost-Benefit Analysis**: Compare infrastructure costs versus value delivered, ROI on GenAI investment, productivity improvements, and customer satisfaction impact to justify and optimize your GenAI initiatives.
+  </TabItem>
+</Tabs>
+
+## Setting Up Tracing for Production Endpoints
+
+When deploying your GenAI application to production, you need to configure MLflow Tracing to send traces to your MLflow tracking server. This configuration forms the foundation for all production observability capabilities.
 
 <Card>
   <div className="flex-column">
     <div className="flex-row">
       <div className="flex-item">
-        #### Key Benefits
+        #### Pro Tip: Using the Lightweight Tracing SDK
+
+        The [MLflow Tracing SDK `mlflow-tracing`](/genai/tracing/lightweight-sdk) is a lightweight package that only includes the minimum set of dependencies to instrument your code/models/agents with MLflow Tracing.
+
 
         **⚡️ Faster Deployment**: Significantly smaller package size and fewer dependencies enable quicker deployments in containers and serverless environments
 
@@ -48,18 +73,6 @@ The [MLflow Tracing SDK `mlflow-tracing`](/genai/tracing/lightweight-sdk) is a l
 When installing the MLflow Tracing SDK, make sure the environment **does not have** the full MLflow package installed. Having both packages in the same environment might cause conflicts and unexpected behaviors.
 :::
 
-**Production vs Development Packages:**
-- **Production** (`mlflow-tracing`): Minimal dependencies, performance optimized, client-side tracing only
-- **Development** (`mlflow`): Full MLflow features including UI, evaluations, experimentation tools
-
-:::note
-MLflow 3 (specifically `mlflow-tracing` for production) is required for production tracing. MLflow 2.x is **not supported for production deployments** due to performance limitations and missing features essential for production use.
-:::
-
-## Setting Up Tracing for Production Endpoints
-
-When deploying your GenAI application to production, you need to configure MLflow Tracing to send traces to your MLflow tracking server. This configuration forms the foundation for all production observability capabilities.
-
 ### Environment Variable Configuration
 
 Configure the following environment variables in your production environment:
@@ -76,6 +89,29 @@ export MLFLOW_ENABLE_ASYNC_TRACE_LOGGING=true
 export MLFLOW_ASYNC_TRACE_LOGGING_MAX_WORKERS=10
 export MLFLOW_ASYNC_TRACE_LOGGING_MAX_QUEUE_SIZE=1000
 ```
+
+## Self-Hosted Tracking Server
+
+You can use the MLflow tracking server to store production traces. However, the tracking server is optimized for offline experience and generally not suitable for handling hyper-scale traffic. For high-volume production workloads, consider using OpenTelemetry integration with dedicated observability platforms.
+
+If you choose to use the tracking server in production, we **strongly recommend**:
+
+1. **Use SQL-based tracking server** on top of a scalable database and artifact storage
+2. **Configure proper indexing** on trace tables for better query performance
+3. **Set up periodic deletion** for trace data management
+4. **Monitor server performance** and scale appropriately
+
+Refer to the [tracking server setup guide](/ml/tracking#tracking-setup) for more details.
+
+### Performance Considerations
+
+**Database**: Use PostgreSQL or MySQL for better concurrent write performance rather than SQLite for production deployments.
+
+**Storage**: Use cloud storage (S3, Azure Blob, GCS) for artifact storage to ensure scalability and reliability.
+
+**Indexing**: Ensure proper indexes on `timestamp_ms`, `status`, and frequently queried tag columns to maintain query performance as trace volume grows.
+
+**Retention**: Implement data retention policies to manage storage costs and maintain system performance over time.
 
 ### Docker Deployment Example
 
@@ -147,7 +183,96 @@ spec:
               value: '1.0.0'
 ```
 
-### Databricks Model Serving Integration
+## OpenTelemetry Integration
+
+Traces generated by MLflow are compatible with the [OpenTelemetry trace specs](https://opentelemetry.io/docs/specs/otel/trace/api/#span). Therefore, MLflow traces can be exported to various observability platforms that support OpenTelemetry.
+
+By default, MLflow exports traces to the MLflow Tracking Server. To enable exporting traces to an OpenTelemetry Collector, set the `OTEL_EXPORTER_OTLP_ENDPOINT` environment variable **before starting any trace**:
+
+```bash
+pip install opentelemetry-exporter-otlp
+```
+
+```python
+import mlflow
+import os
+
+# Set the endpoint of the OpenTelemetry Collector
+os.environ["OTEL_EXPORTER_OTLP_TRACES_ENDPOINT"] = "http://localhost:4317/v1/traces"
+# Optionally, set the service name to group traces
+os.environ["OTEL_SERVICE_NAME"] = "your-service-name"
+
+# Trace will be exported to the OTel collector
+with mlflow.start_span(name="foo") as span:
+    span.set_inputs({"a": 1})
+    span.set_outputs({"b": 2})
+```
+
+### Supported Observability Platforms
+
+Click on the following icons to learn more about how to set up OpenTelemetry Collector for your specific observability platform:
+
+<CardGroup isSmall>
+    <SmallLogoCard link="https://docs.datadoghq.com/opentelemetry/">
+        <span>![Datadog Logo](/images/logos/datadog-logo.png)</span>
+    </SmallLogoCard>
+    <SmallLogoCard link="https://docs.newrelic.com/docs/opentelemetry/get-started/apm-monitoring/opentelemetry-apm-intro/#review-settings">
+        <span>![NewRelic Logo](/images/logos/new-relic-logo.png)</span>
+    </SmallLogoCard>
+    <SmallLogoCard link="https://signoz.io/docs/instrumentation/opentelemetry-python/">
+        <span>![Signoz Logo](/images/logos/signoz-logo.svg)</span>
+    </SmallLogoCard>
+    <SmallLogoCard link="https://docs.splunk.com/observability/en/gdi/get-data-in/get-data-in.html">
+        <span>![Splunk Logo](/images/logos/splunk-logo.png)</span>
+    </SmallLogoCard>
+    <SmallLogoCard link="https://grafana.com/docs/grafana-cloud/send-data/otlp/send-data-otlp/">
+        <span>![Grafana Logo](/images/logos/grafana-logo.png)</span>
+    </SmallLogoCard>
+    <SmallLogoCard link="https://docs.lightstep.com/docs/collector-home-page">
+        <span>![ServiceNow Logo](/images/logos/servicenow-logo.avif)</span>
+    </SmallLogoCard>
+</CardGroup>
+
+### OpenTelemetry Configuration
+
+MLflow uses the standard OTLP Exporter for exporting traces to OpenTelemetry Collector instances. You can use [all of the configurations](https://opentelemetry.io/docs/languages/sdk-configuration/otlp-exporter/) supported by OpenTelemetry:
+
+```bash
+export OTEL_EXPORTER_OTLP_TRACES_ENDPOINT="http://localhost:4317/v1/traces"
+export OTEL_EXPORTER_OTLP_TRACES_PROTOCOL="http/protobuf"
+export OTEL_EXPORTER_OTLP_TRACES_HEADERS="api_key=12345"
+```
+
+:::warning Trace Exports
+MLflow only exports traces to a single destination. When the `OTEL_EXPORTER_OTLP_ENDPOINT` environment variable is configured, MLflow will **not** export traces to the MLflow Tracking Server and you will not see traces in the MLflow UI.
+:::
+
+## Managed Monitoring with Databricks
+
+If you are looking for a managed solution for monitoring your GenAI application with complete observability by MLflow Tracing, we recommend using [Lakehouse Monitoring for GenAI](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) on Databricks.
+
+:::info
+
+    Don't have a Databricks account? [Sign up for free](https://docs.databricks.com/aws/en/getting-started/free-trial) and get started in a minute!
+
+:::
+
+![Monitoring Hero](https://assets.docs.databricks.com/_static/images/generative-ai/monitoring/monitoring-hero.gif)
+
+This solution provides an instant access to a fully functional monitoring system and dashboard for your GenAI application, which includes:
+
+* Track **operational metrics** like request volume, latency, errors, and cost.
+* Monitor **quality metrics** such as correctness, safety, context sufficiency, and more using managed evaluation.
+* Configure **custom metrics** with Python function.
+* Root cause analysis by looking at the recorded **traces** from MLflow Tracing.
+
+Lakehouse Monitoring for GenAI can be used for your GenAI application, regardless of whether it is hosted on Databricks or not. You can run the application hosted on any cloud or on-premise, and configure MLflow Tracing to send traces to Databricks to monitor the application.
+
+For more details about the product and how to set it up, please refer to the [Lakehouse Monitoring for GenAI](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) documentation.
+
+
+
+## Databricks Model Serving Integration
 
 When you deploy GenAI applications that have been instrumented with MLflow Tracing through the Mosaic AI Agent Framework, MLflow Tracing works automatically without any additional configuration. This integration provides seamless observability from development to production deployment.
 
@@ -171,32 +296,30 @@ def my_agent(query: str) -> str:
 deployed_agent = deploy(model=my_agent, experiment_name="production-agent-traces")
 ```
 
-### Verifying Trace Collection
+After deployment, verify that traces are being collected properly by checking traces in the MLflow UI.
 
-After deployment, verify that traces are being collected properly:
+## Production Monitoring Configurations
 
-```python
-import mlflow
-from mlflow.client import MlflowClient
-import os
+### Asynchronous Trace Logging
 
-# Check connection to MLflow server
-client = MlflowClient()
-try:
-    # List recent experiments to verify connectivity
-    experiments = client.search_experiments()
-    print(f"Connected to MLflow. Found {len(experiments)} experiments.")
+For production applications, MLflow logs traces asynchronously by default to prevent blocking your application:
 
-    # Check if traces are being logged
-    traces = mlflow.search_traces(
-        experiment_names=[os.getenv("MLFLOW_EXPERIMENT_NAME", "production-genai-app")],
-        max_results=5,
-    )
-    print(f"Found {len(traces)} recent traces.")
-except Exception as e:
-    print(f"Error connecting to MLflow: {e}")
-    print(f"Check your tracking URI and connectivity")
+| Environment Variable | Description | Default Value |
+|----------------------|-------------|---------------|
+| `MLFLOW_ENABLE_ASYNC_TRACE_LOGGING` | Whether to log traces asynchronously. When set to `False`, traces will be logged in a blocking manner. | `True` |
+| `MLFLOW_ASYNC_TRACE_LOGGING_MAX_WORKERS` | The maximum number of worker threads to use for async trace logging per process. Increasing this allows higher throughput of trace logging, but also increases CPU usage and memory consumption. | `10` |
+| `MLFLOW_ASYNC_TRACE_LOGGING_MAX_QUEUE_SIZE` | The maximum number of traces that can be queued before being logged to backend by the worker threads. When the queue is full, new traces will be discarded. Increasing this allows higher durability of trace logging, but also increases memory consumption. | `1000` |
+| `MLFLOW_ASYNC_TRACE_LOGGING_RETRY_TIMEOUT` | The timeout in seconds for retrying failed trace logging. When a trace logging fails, it will be retried up to this timeout with backoff, after which it will be discarded. | `500` |
+
+Example configuration for high-volume applications:
+
+```bash
+export MLFLOW_ENABLE_ASYNC_TRACE_LOGGING=true
+export MLFLOW_ASYNC_TRACE_LOGGING_MAX_WORKERS=20
+export MLFLOW_ASYNC_TRACE_LOGGING_MAX_QUEUE_SIZE=2000
+export MLFLOW_ASYNC_TRACE_LOGGING_RETRY_TIMEOUT=600
 ```
+
 
 ## Adding Context to Production Traces
 
@@ -320,287 +443,27 @@ Use the contextual information to analyze production behavior:
 
 ```python
 import mlflow
-from mlflow.client import MlflowClient
-
-client = MlflowClient()
-experiment = client.get_experiment_by_name("production-genai-app")
 
 # Query traces by user
-user_traces = client.search_traces(
+user_traces = mlflow.search_traces(
     experiment_ids=[experiment.experiment_id],
     filter_string="tags.`mlflow.trace.user` = 'user-jane-doe-12345'",
     max_results=100,
 )
 
 # Query traces by session
-session_traces = client.search_traces(
+session_traces = mlflow.search_traces(
     experiment_ids=[experiment.experiment_id],
     filter_string="tags.`mlflow.trace.session` = 'session-def-456'",
     max_results=100,
 )
 
 # Query traces by environment
-production_traces = client.search_traces(
+production_traces = mlflow.search_traces(
     experiment_ids=[experiment.experiment_id],
     filter_string="tags.environment = 'production'",
     max_results=100,
 )
-```
-
-## Key Monitoring Areas
-
-Understanding what to monitor helps you focus on metrics that actually impact user experience and business outcomes. Rather than trying to monitor everything, focus on areas that provide actionable insights for your specific application and user base.
-
-<Tabs>
-  <TabItem value="operational" label="Operational Metrics" default>
-    **Performance and Reliability**: Monitor end-to-end response times from user request to final response, including LLM inference latency, retrieval system performance, and component-level bottlenecks. Track overall error rates, LLM API failures, timeout occurrences, and dependency failures to maintain system reliability.
-
-    **Resource Utilization**: Monitor token consumption patterns, API cost tracking, request throughput, and system resource usage to optimize performance and control costs.
-
-    **Business Metrics**: Track user engagement rates, session completion rates, feature adoption, and user satisfaction scores to understand the business impact of your application.
-  </TabItem>
-  <TabItem value="quality" label="Quality Metrics">
-    **Response Quality**: Assess response relevance to user queries, factual accuracy, completeness of responses, and consistency across similar queries to ensure your application meets user needs.
-
-    **Safety and Compliance**: Monitor for harmful content detection, bias monitoring, privacy compliance, and regulatory adherence, which is especially important for applications in regulated industries.
-
-    **User Experience Quality**: Track response helpfulness, clarity and readability, appropriate tone and style, and multi-turn conversation quality to optimize user satisfaction.
-
-    **Domain-Specific Quality**: Implement metrics that vary by application type, such as technical accuracy for specialized domains, citation quality for RAG applications, code quality for programming assistants, or creative quality for content generation.
-  </TabItem>
-  <TabItem value="business" label="Business Impact">
-    **User Behavior**: Monitor session duration and depth, feature usage patterns, user retention rates, and conversion metrics to understand how users engage with your application.
-
-    **Operational Efficiency**: Track support ticket reduction, process automation success, time savings for users, and task completion rates to measure operational improvements.
-
-    **Cost-Benefit Analysis**: Compare infrastructure costs versus value delivered, ROI on GenAI investment, productivity improvements, and customer satisfaction impact to justify and optimize your GenAI initiatives.
-  </TabItem>
-</Tabs>
-
-## Production Insights from Traces
-
-Production traces provide valuable insights across multiple dimensions that aren't visible during development. These insights help you understand real-world usage patterns and identify opportunities for improvement.
-
-**User Interaction Analysis**: Real user queries often differ significantly from test cases, revealing the complexity and variety of actual use cases. Conversation patterns in multi-turn interactions show how well your application maintains context and handles follow-up questions. Query complexity distribution helps you understand whether your application handles the full range of user needs effectively.
-
-**Performance and Reliability Monitoring**: Error pattern analysis reveals systemic issues that may not be apparent from individual failures. Latency monitoring across different components helps you optimize response times and identify bottlenecks. Resource usage tracking enables cost optimization and capacity planning.
-
-**Quality and Feedback Insights**: User feedback provides direct insight into how well your application meets real needs. Quality trends over time reveal whether changes to your application actually improve user experience. Behavioral pattern analysis helps identify usage patterns that lead to better outcomes.
-
-## Production Monitoring Configurations
-
-### Asynchronous Trace Logging
-
-For production applications, MLflow logs traces asynchronously by default to prevent blocking your application:
-
-| Environment Variable | Description | Default Value |
-|----------------------|-------------|---------------|
-| `MLFLOW_ENABLE_ASYNC_TRACE_LOGGING` | Whether to log traces asynchronously. When set to `False`, traces will be logged in a blocking manner. | `True` |
-| `MLFLOW_ASYNC_TRACE_LOGGING_MAX_WORKERS` | The maximum number of worker threads to use for async trace logging per process. Increasing this allows higher throughput of trace logging, but also increases CPU usage and memory consumption. | `10` |
-| `MLFLOW_ASYNC_TRACE_LOGGING_MAX_QUEUE_SIZE` | The maximum number of traces that can be queued before being logged to backend by the worker threads. When the queue is full, new traces will be discarded. Increasing this allows higher durability of trace logging, but also increases memory consumption. | `1000` |
-| `MLFLOW_ASYNC_TRACE_LOGGING_RETRY_TIMEOUT` | The timeout in seconds for retrying failed trace logging. When a trace logging fails, it will be retried up to this timeout with backoff, after which it will be discarded. | `500` |
-
-Example configuration for high-volume applications:
-
-```bash
-export MLFLOW_ENABLE_ASYNC_TRACE_LOGGING=true
-export MLFLOW_ASYNC_TRACE_LOGGING_MAX_WORKERS=20
-export MLFLOW_ASYNC_TRACE_LOGGING_MAX_QUEUE_SIZE=2000
-export MLFLOW_ASYNC_TRACE_LOGGING_RETRY_TIMEOUT=600
-```
-
-## OpenTelemetry Integration
-
-Traces generated by MLflow are compatible with the [OpenTelemetry trace specs](https://opentelemetry.io/docs/specs/otel/trace/api/#span). Therefore, MLflow traces can be exported to various observability platforms that support OpenTelemetry.
-
-By default, MLflow exports traces to the MLflow Tracking Server. To enable exporting traces to an OpenTelemetry Collector, set the `OTEL_EXPORTER_OTLP_ENDPOINT` environment variable **before starting any trace**:
-
-```bash
-pip install opentelemetry-exporter-otlp
-```
-
-```python
-import mlflow
-import os
-
-# Set the endpoint of the OpenTelemetry Collector
-os.environ["OTEL_EXPORTER_OTLP_TRACES_ENDPOINT"] = "http://localhost:4317/v1/traces"
-# Optionally, set the service name to group traces
-os.environ["OTEL_SERVICE_NAME"] = "your-service-name"
-
-# Trace will be exported to the OTel collector
-with mlflow.start_span(name="foo") as span:
-    span.set_inputs({"a": 1})
-    span.set_outputs({"b": 2})
-```
-
-### Supported Observability Platforms
-
-Click on the following icons to learn more about how to set up OpenTelemetry Collector for your specific observability platform:
-
-<CardGroup isSmall>
-    <SmallLogoCard link="https://docs.datadoghq.com/opentelemetry/">
-        <span>![Datadog Logo](/images/logos/datadog-logo.png)</span>
-    </SmallLogoCard>
-    <SmallLogoCard link="https://docs.newrelic.com/docs/opentelemetry/get-started/apm-monitoring/opentelemetry-apm-intro/#review-settings">
-        <span>![NewRelic Logo](/images/logos/new-relic-logo.png)</span>
-    </SmallLogoCard>
-    <SmallLogoCard link="https://signoz.io/docs/instrumentation/opentelemetry-python/">
-        <span>![Signoz Logo](/images/logos/signoz-logo.svg)</span>
-    </SmallLogoCard>
-    <SmallLogoCard link="https://docs.splunk.com/observability/en/gdi/get-data-in/get-data-in.html">
-        <span>![Splunk Logo](/images/logos/splunk-logo.png)</span>
-    </SmallLogoCard>
-    <SmallLogoCard link="https://grafana.com/docs/grafana-cloud/send-data/otlp/send-data-otlp/">
-        <span>![Grafana Logo](/images/logos/grafana-logo.png)</span>
-    </SmallLogoCard>
-    <SmallLogoCard link="https://docs.lightstep.com/docs/collector-home-page">
-        <span>![ServiceNow Logo](/images/logos/servicenow-logo.avif)</span>
-    </SmallLogoCard>
-</CardGroup>
-
-### OpenTelemetry Configuration
-
-MLflow uses the standard OTLP Exporter for exporting traces to OpenTelemetry Collector instances. You can use [all of the configurations](https://opentelemetry.io/docs/languages/sdk-configuration/otlp-exporter/) supported by OpenTelemetry:
-
-```bash
-export OTEL_EXPORTER_OTLP_TRACES_ENDPOINT="http://localhost:4317/v1/traces"
-export OTEL_EXPORTER_OTLP_TRACES_PROTOCOL="http/protobuf"
-export OTEL_EXPORTER_OTLP_TRACES_HEADERS="api_key=12345"
-```
-
-:::warning Trace Exports
-MLflow only exports traces to a single destination. When the `OTEL_EXPORTER_OTLP_ENDPOINT` environment variable is configured, MLflow will **not** export traces to the MLflow Tracking Server and you will not see traces in the MLflow UI.
-:::
-
-## Self-Hosted Tracking Server
-
-You can use the MLflow tracking server to store production traces. However, the tracking server is optimized for offline experience and generally not suitable for handling hyper-scale traffic. For high-volume production workloads, consider using OpenTelemetry integration with dedicated observability platforms.
-
-If you choose to use the tracking server in production, we **strongly recommend**:
-
-1. **Use SQL-based tracking server** on top of a scalable database and artifact storage
-2. **Configure proper indexing** on trace tables for better query performance
-3. **Set up periodic deletion** for trace data management
-4. **Monitor server performance** and scale appropriately
-
-Refer to the [tracking server setup guide](/ml/tracking#tracking-setup) for more details.
-
-### Performance Considerations
-
-**Database**: Use PostgreSQL or MySQL for better concurrent write performance rather than SQLite for production deployments.
-
-**Storage**: Use cloud storage (S3, Azure Blob, GCS) for artifact storage to ensure scalability and reliability.
-
-**Indexing**: Ensure proper indexes on `timestamp_ms`, `status`, and frequently queried tag columns to maintain query performance as trace volume grows.
-
-**Retention**: Implement data retention policies to manage storage costs and maintain system performance over time.
-
-## Advanced Monitoring Capabilities
-
-For organizations requiring comprehensive automated monitoring capabilities, Databricks Mosaic AI provides enterprise-grade solutions that go beyond basic trace collection. These capabilities are particularly valuable for large-scale deployments where manual monitoring becomes impractical.
-
-**Automated Quality Assessment**: Run LLM judges and custom evaluators automatically on production traffic samples, providing continuous quality monitoring without manual intervention.
-
-**Real-time Monitoring Dashboards**: Pre-built visualizations for operational metrics, quality trends, and business impact give teams immediate visibility into application performance.
-
-**Intelligent Alerting Systems**: ML-powered anomaly detection combined with threshold-based alerts reduces false positives while ensuring critical issues are caught quickly.
-
-**Cost Optimization Tools**: Advanced analytics for token usage, cost prediction, and budget management help organizations optimize their GenAI investments.
-
-**Compliance and Safety Monitoring**: Automated detection of bias, harmful content, and regulatory compliance issues is essential for organizations operating in regulated industries.
-
-Learn more about [Production AI Monitoring with Databricks](https://docs.databricks.com/en/machine-learning/model-serving/monitor-inference.html).
-
-## Production Monitoring Best Practices
-
-### 1. Structured Logging and Tagging
-
-Use consistent tagging schemes across your application to enable effective filtering and analysis:
-
-```python
-# Standard production tags
-standard_tags = {
-    "environment": os.getenv("ENVIRONMENT", "production"),
-    "service_name": os.getenv("SERVICE_NAME", "genai-app"),
-    "version": os.getenv("APP_VERSION", "1.0.0"),
-    "region": os.getenv("REGION", "us-east-1"),
-}
-
-
-@mlflow.trace
-def my_function():
-    mlflow.update_current_trace(tags=standard_tags)
-    # Your function logic
-```
-
-### 2. Error Handling and Monitoring
-
-Implement robust error handling to ensure traces are logged even when failures occur:
-
-```python
-@mlflow.trace
-def robust_function():
-    try:
-        # Your function logic
-        result = process_request()
-        return result
-    except Exception as e:
-        # Log error details to trace
-        mlflow.update_current_trace(
-            tags={"error": True, "error_type": type(e).__name__},
-            attributes={"error_message": str(e)},
-        )
-        raise
-```
-
-### 3. Performance Monitoring
-
-Track key performance metrics to understand system behavior and optimize performance:
-
-```python
-import time
-
-
-@mlflow.trace
-def performance_tracked_function():
-    start_time = time.time()
-
-    # Your function logic
-    result = expensive_operation()
-
-    # Log performance metrics
-    duration = time.time() - start_time
-    mlflow.update_current_trace(
-        attributes={
-            "duration_seconds": duration,
-            "tokens_processed": len(result.split()) if isinstance(result, str) else 0,
-        }
-    )
-
-    return result
-```
-
-### 4. Health Checks
-
-Implement health checks to monitor trace logging and system connectivity:
-
-```python
-from fastapi import FastAPI
-from mlflow.client import MlflowClient
-
-app = FastAPI()
-
-
-@app.get("/health")
-def health_check():
-    try:
-        client = MlflowClient()
-        # Quick connectivity test
-        experiments = client.search_experiments(max_results=1)
-        return {"status": "healthy", "mlflow_connected": True}
-    except Exception as e:
-        return {"status": "unhealthy", "mlflow_connected": False, "error": str(e)}
 ```
 
 ## Summary
